add title to visualization graph

--- a/first_expiriment.ipynb
+++ b/first_expiriment.ipynb
@@ -709,6 +709,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da1edf64",
+   "metadata": {},
+   "source": [
+    "### Visualize Graph in MemGraph\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7b5ed6ce",
